--- a/index.html
+++ b/index.html
@@ -13,7 +13,61 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <div id="carouselExampleCaptions" class="mx-auto d-block carousel-fade carousel slide w-custom" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="FIRSTPLANT.jpg" class="d-block w-100" alt="...">
+          <div class="custom-bg carousel-caption d-none d-md-block">
+            <h3>The First Plant</h3>
+            <p class="fs-5 fw-lighter">Once upon a time a woman received a houseplant as a gift.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="NURSERY.jpg" class="d-block w-100" alt="...">
+          <div class="custom-bg carousel-caption d-none d-md-block">
+            <h3>She Loved It</h3>
+            <p class="fs-5 fw-lighter">She took care of the plant well and realized she could add to her happiness by buying more plants.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="HOUSEPLANTS.jpg" class="d-block w-100" alt="...">
+          <div class="custom-bg carousel-caption d-none d-md-block">
+            <h3>And Then There Were More</h3>
+            <p class="fs-5 fw-lighter">She started placing plants all over her house.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="MOREPLANTS.jpg" class="d-block w-100" alt="...">
+          <div class="custom-bg carousel-caption d-none d-md-block">
+            <h3>No Control</h3>
+            <p class="fs-5 fw-lighter">Pretty soon, her whole personality became plants.</p>
+          </div>       
+        </div>
+        <div class="carousel-item">
+          <img src="GREENHOUSE.jpg" class="d-block w-100" alt="...">
+          <div class="custom-bg carousel-caption d-none d-md-block">
+            <h3>The Takeover</h3>
+            <p class="fs-5 fw-lighter">Finally, the plants took her home over for their own.</p>
+          </div>       
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
