--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <div id="carouselExampleCaptions" class="mx-auto d-block carousel-fade carousel slide w-custom" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="mt-4 mx-auto d-block carousel-fade carousel slide w-50 p-2 bg-black" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
