--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Arvo&family=Neuton:wght@200;400&family=Old+Standard+TT&family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=Prata&family=Roboto:ital,wght@0,100;0,300;0,900;1,100;1,300;1,900&family=Taviraj:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&family=Yeseva+One&display=swap" rel="stylesheet">
 
 
-    <title>Hello, world!</title>
+    <title>Hello, plants!</title>
   </head>
   <body>
 
