--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="HOUSEPLANTS.jpg" class="d-block w-100" alt="...">
+          <img src="HOUSEPLANTS1.jpg" class="d-block w-100" alt="...">
           <div class="custom-bg carousel-caption d-none d-md-block">
             <h3>And Then There Were More</h3>
             <p class="fs-5 fw-lighter">She started placing plants all over her house.</p>
