--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom Style Sheet -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Arvo&family=Neuton:wght@200;400&family=Old+Standard+TT&family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=Prata&family=Roboto:ital,wght@0,100;0,300;0,900;1,100;1,300;1,900&family=Taviraj:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&family=Yeseva+One&display=swap" rel="stylesheet">
